<resources>
    <string name="app_name">TcpGamePad</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_adress">IP adress</string>
    <string name="prompt_port">port number</string>
    <string name="action_sign_in">save</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_adress">This adress is invalid</string>
    <string name="error_invalid_port">This port is too short</string>
    <string name="error_cantConnect">Cant connect</string>
    <string name="error_mustBeConnect">Please connect first.</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_connection">Connection</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentLog_Title">logs</string>
    <string name="fragmentGamePad_Title">gamePad</string>
    <string name="fragmentConnection_Title">connection</string>
    <string name="virtualGamepadStart">virtual gamepad</string>
    <string name="title_activity_game_pad_virtual">GamePadVirtual</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="transmissionRate_prompt">rate (Hz)</string>
    <string-array name="transmissionRate">
        <item>1</item>
        <item>2</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string name="retransmissionSec_prompt">time (sec after input)</string>
    <string-array name="retransmissionSec">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="OpticalLatencyTestFragment_prompt">Click to start</string>
    <string name="OpticalLatencyTestFragment_howto">Please restart drone.</string>
</resources>
